fix article overflow centering

--- a/resources/public/css/global.css
+++ b/resources/public/css/global.css
@@ -226,7 +226,6 @@ td > a {
 
 .bio {
   margin-top: 100px;
-  max-width: 800px;
 }
 
 header {
